fixed landscape logo alignment

--- a/style.css
+++ b/style.css
@@ -187,10 +187,11 @@ button, input[type="submit"], input[type="reset"] {
     .bctecnica {
         display: block;
         width: 100%;
-        font-size: 1.2rem;
+        font-size: 1rem;
         color: white;
         text-align: center;
         margin-top: 1rem;
+        padding-left: 3rem;
     }
 
 }
